update item detail palge

--- a/item-detail.html
+++ b/item-detail.html
@@ -258,10 +258,10 @@
 
       <div class="app__document app__document--story cf">
         <div class="document__visual-identifier">
-          <span>Project</span>
+          <span>project</span>
         </div>
         <header class="document__header">
-          <h2>New project</h2>
+          <h2>Mobile: error blocks item creation at CNI in some cases <span class="id">390427</span></h2>
 
           <div class="actions">
             <i class="process process--toggle"></i>
@@ -330,7 +330,7 @@
                             <div class="field field--empty">
                                 <input type="text" id="id_1">
                                 <label for="id_1">
-                                    <span>Titel lang</span>
+                                    <span></span>
                                 </label>
                                 <span class="placeholder">Titel lang</span>
                             </div>
