--- a/index.html
+++ b/index.html
@@ -178,35 +178,36 @@
       </header>
 
       <div class="app__document app__document--story cf">
-        <div class="document__visual-identifier">
-          <span>Project</span>
+        <div class="sticky__header__wrapper">
+          <div class="document__visual-identifier">
+            <span>Project</span>
+          </div>
+          <header class="document__header">
+            <h2>Open UX improvemnts <span class="id">3452</span></h2>
+
+            <div class="actions">
+              <i class="process process--toggle"></i>
+              <i class="media media--toggle"></i>
+            </div>
+
+          <!--
+            <div class="actions">
+              <i class="more"><span class="counter"></span></i>
+              <i class="delete"></i>
+              <i class="mail"><span class="counter"></span></i>
+              <i class="print"></i>
+              <i class="hourglass"></i>
+              <i class="bookmark"></i>
+              <i class="process process--toggle"></i>
+              <i class="media media--toggle"></i>
+            </div>
+          -->
+
+            <div class="status">
+                <span>On schedule</span>
+            </div>
+          </header>
         </div>
-        <header class="document__header">
-          <h2>Open UX improvemnts <span class="id">3452</span></h2>
-
-          <div class="actions">
-            <i class="process process--toggle"></i>
-            <i class="media media--toggle"></i>
-          </div>
-
-        <!--
-          <div class="actions">
-            <i class="more"><span class="counter"></span></i>
-            <i class="delete"></i>
-            <i class="mail"><span class="counter"></span></i>
-            <i class="print"></i>
-            <i class="hourglass"></i>
-            <i class="bookmark"></i>
-            <i class="process process--toggle"></i>
-            <i class="media media--toggle"></i>
-          </div>
-        -->
-
-          <div class="status">
-              <span>On schedule</span>
-          </div>
-        </header>
-
         <div class="document__content cf">
           <div class="document__info-data cf">
             <aside class="document__info">
@@ -474,6 +475,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2/velocity.ui.min.js"></script>
     <script src="js/plugin/tabs.js"></script>
+    <script src="js/plugin/scroll.js"></script>
+    <script src="js/plugin/jquery.sticky.js"></script>
     <!-- END -->
 
     <script src="js/root.js"></script>
