--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/font-icons.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/plugin/tabs.css">
+  <link rel="stylesheet" href="css/plugin/sticky.css">
   <link rel="stylesheet" href="css/app.css">
 </head>
 
