--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <span>Project</span>
           </div>
           <header class="document__header">
-            <h2>Open UX improvemnts <span class="id">3452</span></h2>
+            <h2>Open UX improvments <span class="id">3452</span></h2>
 
             <div class="actions">
               <i class="process process--toggle"></i>
