--- a/index.html
+++ b/index.html
@@ -132,7 +132,6 @@
 
         <div class="breadcrumbs">
           <div class="breadcrumb">
-            <i class="breadcrumb__symbol fa fa-circle-thin"></i>
             <div class="breadcrumb__selector">
               <input type="input" placeholder="filter">
               <ul>
@@ -144,10 +143,9 @@
                 <li>Wiki</li>
               </ul>
             </div>
-            <span class="title">Permits Workspace</span>
+            <span class="title"><span class="link">Bril</span> <span class="label">Jaarplan 2016 - Staf</span></span>
           </div>
           <div class="breadcrumb">
-            <i class="breadcrumb__symbol fa fa-circle-thin"></i>
             <div class="breadcrumb__selector">
               <input type="input" placeholder="filter">
               <ul>
@@ -159,10 +157,9 @@
                 <li>Wiki</li>
               </ul>
             </div>
-            <span class="title">HGK Testje</span>
+            <span class="title"><span class="link">Doelstelling</span> <span class="label">De aanbevelingen van Audit Vlaanderen m.b.t. organisatiebeheersing uitvoeren</span></span>
           </div>
           <div class="breadcrumb">
-            <i class="breadcrumb__symbol fa fa-circle-thin"></i>
             <div class="breadcrumb__selector">
               <input type="input" placeholder="filter">
               <ul>
@@ -174,6 +171,21 @@
                 <li>Wiki</li>
               </ul>
             </div>
+            <span class="title"><span class="link">Project</span> <span class="label">D06.0/P03 - Een monitoringsysteem uitbouwen voor de opvolging en bijsturing van</span></span>
+          </div>
+          <div class="breadcrumb">
+            <div class="breadcrumb__selector">
+              <input type="input" placeholder="filter">
+              <ul>
+                <li>Dashboard</li>
+                <li>Finace &amp; Admin</li>
+                <li>Marketing &amp; Design</li>
+                <li>pmx Engineering</li>
+                <li>Professional Services</li>
+                <li>Wiki</li>
+              </ul>
+            </div>
+            <span class="title"><span class="link">Mijlpaal</span> <span class="label">M01 - Processen varend erfgoed</span></span>
           </div>
         </div>
       </header>
