--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                       <div class="item__user">Konstantin Kharlov</div>
                       <div class="item__inner">
                         <div class="cover" style="background-image:url(roadwork.jpg);"></div>
-                        <div class="caption">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+                        <div class="caption">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
                       </div>
                       <div class="item__postdate">uploaded at <span class="postdate__time">9:01</span> on <span class="postdate__date">10/06/2017</span></div>
                     </div>
