added content for tabs panel tabindex 4 and 5

--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
             <!-- tab contents -->
             content 3
           </div><!-- /.tabs__panel -->
+          <div class="tabs__panel" tabindex="4">
+            <!-- tab contents -->
+            content 4
+          </div><!-- /.tabs__panel -->
+          <div class="tabs__panel" tabindex="5">
+            <!-- tab contents -->
+            content 5
+          </div><!-- /.tabs__panel -->
         </div><!-- /.tabs__panels -->
       </div>
 
