top view width 100%

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           </header>
 
             <div class="app__document app__document--story cf">
-                <div id="sticky-wrapper" class="sticky-wrapper" style="height: 65.8726px;"><div class="sticky__header__wrapper" style="width: 1180px;">
+                <div id="sticky-wrapper" class="sticky-wrapper" style="height: 65.8726px;"><div class="sticky__header__wrapper" style="width: 100%;">
                   <div class="document__visual-identifier">
                     <span>Project</span>
                   </div>
