--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   <div class="app cf document__info--visible">
 
     <div class="app__overlay"></div>
-    <div class="app__nav">
+    <div class="app__nav__wrapper">
+      <div class="app__nav">
       <div class="tabs tabs--light">
         <div class="tabs__nav">
           <div class="tab__less hide">
@@ -100,6 +101,7 @@
         <!-- /.tabs__panels -->
       </div>
 
+    </div>
     </div>
 
     <div class="notifications">
