put back missing divs

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="app cf document__info--visible">
 
         <div class="app__overlay"></div>
-
-        <div class="app__nav">
+        <div class="app__nav__wrapper">
+          <div class="app__nav">
           <div class="tabs tabs--light">
             <div class="tabs__nav">
               <div class="tab__less hide">
@@ -83,7 +83,7 @@
           </div>
 
         </div>
-
+        </div>
         <div class="notifications">
           <div class="notifications__userInfo">
             <div class="notifications__userInfoAvatar">
