--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           </div>
         </header>
 
-          <div class="app__document app__document--story cf">
+          <div class="app__document app__document--story">
               <div id="sticky-wrapper" class="sticky-wrapper" style="height: 65.8726px;"><div class="sticky__header__wrapper" style="width: 100%;">
                 <div class="document__visual-identifier">
                   <span>Project</span>
@@ -232,11 +232,9 @@
                 </header>
               </div></div>
 
+              <div class="document__content">
 
-
-
-              <div class="document__content cf">
-
+                <div class="panel__left">
                   <aside class="document__info">
                       <div class="tabs">
                       <div class="tabs__nav">
@@ -291,7 +289,9 @@
 
                     </div><!-- /.tabs -->
                   </aside>
+                </div>
 
+                <div class="panel__center">
                   <div class="document__info-data cf">
                       <div class="document__data">
                           <header class="header sticky__document__header">
@@ -478,7 +478,9 @@
                         </div><!-- /.tabs -->
                       </div><!-- /.document__data -->
                   </div><!-- /.document__info-data -->
+                </div>
 
+                <div class="panel__right">
                   <aside class="document__comments">
                       <div class="add-comment">
                         <input class="add-comment__input" placeholder="use @username to notify">
@@ -538,6 +540,7 @@
                         </div>
                       </div><!-- /.tabs -->
                   </aside><!-- /.document__comments -->
+                </div>
 
               </div><!-- /.document__content -->
           </div><!-- /.app__document -->
