--- a/index.html
+++ b/index.html
@@ -554,6 +554,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
   <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2/velocity.ui.min.js"></script>
   <script src="js/plugin/tabs.js"></script>
+  <!-- END -->
+
+  <!-- ALL FOR STICKY -->
   <script src="js/plugin/jquery.stickytableheaders.min.js"></script>
   <script src="js/plugin/jquery.sticky.js"></script>
   <script src="js/plugin/scroll.js"></script>
