--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
                               <h3>Set-up request</h3>
                               <div class="actions">
                                   <ul>
-                                      <li><a href="#">Reject</a></li>
-                                      <li><a href="#">Create</a></li>
+                                      <li><a href="#" class="btn btn--danger">Reject</a></li>
+                                      <li><a href="#" class="btn btn--success">Create</a></li>
                                   </ul>
                               </div>
                           </header>
