--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="css/plugin/tabs.css">
   <link rel="stylesheet" href="css/plugin/sticky.css">
   <link rel="stylesheet" href="css/app.css">
+
+  <link rel="stylesheet" href="css/plugin/hideScrollbars.css">
 </head>
 
 <body>
@@ -515,7 +517,10 @@
                         </div>
                       </div>
 
-                      <div class="tabs tabs--gold">
+                      <div class="tabs tabs--gold hide-scrollbar hide-scrollbar-ff-outer">
+
+                        <div class="hide-scrollbar-ff-inner">
+
                         <div class="tabs__nav">
                           <ul>
                             <span class="tab__active-link-bar" style="left: 10px; width: 100.868px;"></span>
@@ -641,6 +646,9 @@
                             </div>
                           </div>
                         </div>
+
+                        </div><!-- /.hide-scrollbar-ff-inner -->
+
                       </div><!-- /.tabs -->
                   </aside><!-- /.document__comments -->
                 </div>
