scrollbar tests - possible solution for all browsers

--- a/index.html
+++ b/index.html
@@ -517,9 +517,9 @@
                         </div>
                       </div>
 
-                      <div class="tabs tabs--gold hide-scrollbar hide-scrollbar-ff-outer">
+                      <div class="tabs tabs--gold hide-scrollbar">
 
-                        <div class="hide-scrollbar-ff-inner">
+                        <div class="hide-scrollbar-inner">
 
                         <div class="tabs__nav">
                           <ul>
@@ -558,7 +558,6 @@
                                 </div>
                                 <div class="item__postdate">uploaded at <span class="postdate__time">9:01</span> on <span class="postdate__date">10/06/2017</span></div>
                               </div>
-                              <div class="item item--comment item--self">
                               <div class="item item--comment">
                                 <div class="item__user">Nick De Jaeger</div>
                                 <div class="item__inner">
@@ -584,7 +583,6 @@
                                 </div>
                                 <div class="item__postdate">uploaded at <span class="postdate__time">9:01</span> on <span class="postdate__date">10/06/2017</span></div>
                               </div>
-                              <div class="item item--comment item--self">
                               <div class="item item--comment">
                                 <div class="item__user">Nick De Jaeger</div>
                                 <div class="item__inner">
@@ -610,7 +608,6 @@
                                 </div>
                                 <div class="item__postdate">uploaded at <span class="postdate__time">9:01</span> on <span class="postdate__date">10/06/2017</span></div>
                               </div>
-                              <div class="item item--comment item--self">
                               <div class="item item--comment">
                                 <div class="item__user">Nick De Jaeger</div>
                                 <div class="item__inner">
