--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>PMX Desktop Mockup</title>
+
+  <script src="https://www.w3schools.com/lib/w3.js"></script>
+
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="css/font-icons.css">
@@ -85,37 +88,11 @@
 
           </div>
       </div>
-      <div class="notifications">
-        <div class="notifications__userInfo">
-          <div class="notifications__userInfoAvatar">
-            <img src="profile.jpg" alt="profile picture">
-          </div>
-          <div class="notifications__userInfoName">
-            <span class="notifications__userInfoFirstName">Nick</span>
-            <span class="notifications__userInfoLastName">De Jaeger</span>
-          </div>
-        </div>
 
-        <div class="notifications__actions">
-          <ul class="notifications__actionsList">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">My To Do's</a></li>
-            <li><a href="#">Time sheet</a></li>
-            <li><a href="#">Reports</a></li>
-          </ul>
-
-          <ul class="notifications__actionsList notifications__actionsList--account">
-            <li><a href="#"><i class="help"></i>Help</a></li>
-            <li><a href="#"><i class="settings"></i>Settings</a></li>
-            <li><a href="#"><i class="logout"></i>Logout</a></li>
-          </ul>
-        </div>
-      </div>
+      <div class="notifications" w3-include-html="includes/notifications.html"></div>
 
       <main class="app__container">
         <header class="app__header">
-
-
           <div class="top-bar clearfix">
             <div class="top-bar__left">
               <div class="top-bar__item top-bar__itemMenu">
@@ -545,7 +522,7 @@
                               <div class="item item--attachment item--self">
                                 <div class="item__user">Jetro Wils</div>
                                 <div class="item__inner">
-                                  <div class="cover" style="background-image:url(files.jpg);"></div>
+                                  <div class="cover" style="background-image:url(img/files.jpg);"></div>
                                   <div class="caption">Excepteur sint occaecat cupidatat non proident.</div>
                                 </div>
                                 <div class="item__postdate">uploaded at <span class="postdate__time">7:11</span> on <span class="postdate__date">11/06/2017</span></div>
@@ -553,7 +530,7 @@
                               <div class="item item--attachment">
                                 <div class="item__user">Konstantin Kharlov</div>
                                 <div class="item__inner">
-                                  <div class="cover" style="background-image:url(roadwork.jpg);"></div>
+                                  <div class="cover" style="background-image:url(img/roadwork.jpg);"></div>
                                   <div class="caption">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
                                 </div>
                                 <div class="item__postdate">uploaded at <span class="postdate__time">9:01</span> on <span class="postdate__date">10/06/2017</span></div>
@@ -570,7 +547,7 @@
                               <div class="item item--attachment item--self">
                                 <div class="item__user">Jetro Wils</div>
                                 <div class="item__inner">
-                                  <div class="cover" style="background-image:url(files.jpg);"></div>
+                                  <div class="cover" style="background-image:url(img/files.jpg);"></div>
                                   <div class="caption">Excepteur sint occaecat cupidatat non proident.</div>
                                 </div>
                                 <div class="item__postdate">uploaded at <span class="postdate__time">7:11</span> on <span class="postdate__date">11/06/2017</span></div>
@@ -578,7 +555,7 @@
                               <div class="item item--attachment">
                                 <div class="item__user">Konstantin Kharlov</div>
                                 <div class="item__inner">
-                                  <div class="cover" style="background-image:url(roadwork.jpg);"></div>
+                                  <div class="cover" style="background-image:url(img/roadwork.jpg);"></div>
                                   <div class="caption">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
                                 </div>
                                 <div class="item__postdate">uploaded at <span class="postdate__time">9:01</span> on <span class="postdate__date">10/06/2017</span></div>
@@ -595,7 +572,7 @@
                               <div class="item item--attachment item--self">
                                 <div class="item__user">Jetro Wils</div>
                                 <div class="item__inner">
-                                  <div class="cover" style="background-image:url(files.jpg);"></div>
+                                  <div class="cover" style="background-image:url(img/files.jpg);"></div>
                                   <div class="caption">Excepteur sint occaecat cupidatat non proident.</div>
                                 </div>
                                 <div class="item__postdate">uploaded at <span class="postdate__time">7:11</span> on <span class="postdate__date">11/06/2017</span></div>
@@ -603,7 +580,7 @@
                               <div class="item item--attachment">
                                 <div class="item__user">Konstantin Kharlov</div>
                                 <div class="item__inner">
-                                  <div class="cover" style="background-image:url(roadwork.jpg);"></div>
+                                  <div class="cover" style="background-image:url(img/roadwork.jpg);"></div>
                                   <div class="caption">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
                                 </div>
                                 <div class="item__postdate">uploaded at <span class="postdate__time">9:01</span> on <span class="postdate__date">10/06/2017</span></div>
@@ -620,7 +597,7 @@
                               <div class="item item--attachment item--self">
                                 <div class="item__user">Jetro Wils</div>
                                 <div class="item__inner">
-                                  <div class="cover" style="background-image:url(files.jpg);"></div>
+                                  <div class="cover" style="background-image:url(img/files.jpg);"></div>
                                   <div class="caption">Excepteur sint occaecat cupidatat non proident.</div>
                                 </div>
                                 <div class="item__postdate">uploaded at <span class="postdate__time">7:11</span> on <span class="postdate__date">11/06/2017</span></div>
@@ -628,7 +605,7 @@
                               <div class="item item--attachment">
                                 <div class="item__user">Konstantin Kharlov</div>
                                 <div class="item__inner">
-                                  <div class="cover" style="background-image:url(roadwork.jpg);"></div>
+                                  <div class="cover" style="background-image:url(img/roadwork.jpg);"></div>
                                   <div class="caption">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
                                 </div>
                                 <div class="item__postdate">uploaded at <span class="postdate__time">9:01</span> on <span class="postdate__date">10/06/2017</span></div>
@@ -671,6 +648,10 @@
   <!-- END -->
 
   <script src="js/root.js"></script>
+
+  <script>
+    w3.includeHTML();
+  </script>
 
 </body>
 </html>
