put more includes

--- a/index.html
+++ b/index.html
@@ -23,161 +23,13 @@
   <div class="app cf document__info--visible">
 
       <div class="app__overlay"></div>
-      <div class="app__nav__wrapper">
-        <div class="app__nav">
-          <div class="tabs tabs--light">
-            <div class="tabs__nav">
-              <div class="tab__less hide">
-                <span class="tab__shadow"></span>
-                <span class="tab__arrow">←</span>
-                <span class="tab__counter">1</span>
-              </div>
-              <ul>
-                <span class="tab__active-link-bar" style="left: 115.868px; width: 111.92px;"></span>
-                <li><a href="#" class="tab__link" tabindex="1"><span>Structure</span></a></li>
-                <li><a href="#" class="tab__link active" tabindex="2"><span>My smartlists</span></a></li>
-                <li><a href="#" class="tab__link" tabindex="3"><span>Shared by me</span></a></li>
-                <li><a href="#" class="tab__link" tabindex="4"><span>Favorites</span></a></li>
-                <li><a href="#" class="tab__link" tabindex="5"><span>Recently used</span></a></li>
-              </ul>
-              <div class="tab__more hide">
-                <span class="tab__shadow"></span>
-                <span class="tab__arrow">⇾</span>
-                <span class="tab__counter">9</span>
-              </div>
-            </div>
-            <!-- /.tabs__nav -->
-              <div class="nav__search">
-                <input class="search__input" type="search" placeholder="filter">
-                <i class="search__submit-icon" aria-hidden="true"></i>
-              </div>
 
-              <div class="tabs__panels">
-                <div class="tabs__panel" tabindex="1" style="display: none;">
-                  <!-- tab contents -->
-                  content 1
-                </div><!-- /.tabs__panel -->
-
-                <div class="tabs__panel" tabindex="2" style="display: block;">
-                  <!-- tab contents -->
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </div><!-- /.tabs__panel -->
-
-                <div class="tabs__panel" tabindex="3" style="display: none;">
-                  <!-- tab contents -->
-                  content 3
-                </div><!-- /.tabs__panel -->
-                <div class="tabs__panel" tabindex="4" style="display: none;">
-                  <!-- tab contents -->
-                  content 4
-                </div><!-- /.tabs__panel -->
-                <div class="tabs__panel" tabindex="5" style="display: none;">
-                  <!-- tab contents -->
-                  content 5
-                </div><!-- /.tabs__panel -->
-              </div><!-- /.tabs__panels -->
-            </div>
-
-          </div>
-      </div>
+      <div class="app__nav__wrapper" w3-include-html="includes/app-nav.html"></div>
 
       <div class="notifications" w3-include-html="includes/notifications.html"></div>
 
       <main class="app__container">
-        <header class="app__header">
-          <div class="top-bar clearfix">
-            <div class="top-bar__left">
-              <div class="top-bar__item top-bar__itemMenu">
-                <i class="main-nav__toggle"></i>
-              </div>
-              <div class="top-bar__item top-bar__itemTitle">
-                <h1>Dashboard</h1>
-              </div>
-            </div>
-            <div class="top-bar__right">
-              <div class="top-bar__item top-bar__itemSearch">
-                <div class="search-box">
-                  <input type="text" class="search-box__input">
-                  <i class="search-box__submit"></i>
-                </div>
-              </div>
-              <div class="top-bar__item top-bar__itemCreate">
-                <i class="icon__create"></i>
-              </div>
-              <div class="top-bar__item top-bar__itemAccount">
-                <i class="icon__account"></i>
-                <span class="counter"></span>
-              </div>
-            </div>
-          </div>
-
-          <div class="breadcrumbs">
-            <div class="breadcrumb">
-              <div class="breadcrumb__selector">
-                <input type="input" placeholder="filter">
-                <ul>
-                  <li>Dashboard</li>
-                  <li>Finace &amp; Admin</li>
-                  <li>Marketing &amp; Design</li>
-                  <li>pmx Engineering</li>
-                  <li>Professional Services</li>
-                  <li>Wiki</li>
-                </ul>
-              </div>
-              <span class="title"><span class="link">Bril</span> <span class="label">Jaarplan 2016 - Staf</span></span>
-            </div>
-            <div class="breadcrumb">
-              <div class="breadcrumb__selector">
-                <input type="input" placeholder="filter">
-                <ul>
-                  <li>Dashboard</li>
-                  <li>Finace &amp; Admin</li>
-                  <li>Marketing &amp; Design</li>
-                  <li>pmx Engineering</li>
-                  <li>Professional Services</li>
-                  <li>Wiki</li>
-                </ul>
-              </div>
-              <span class="title"><span class="link">Doelstelling</span> <span class="label">De aanbevelingen van Audit Vlaanderen m.b.t. organisatiebeheersing uitvoeren</span></span>
-            </div>
-            <div class="breadcrumb">
-              <div class="breadcrumb__selector">
-                <input type="input" placeholder="filter">
-                <ul>
-                  <li>Dashboard</li>
-                  <li>Finace &amp; Admin</li>
-                  <li>Marketing &amp; Design</li>
-                  <li>pmx Engineering</li>
-                  <li>Professional Services</li>
-                  <li>Wiki</li>
-                </ul>
-              </div>
-              <span class="title"><span class="link">Project</span> <span class="label">D06.0/P03 - Een monitoringsysteem uitbouwen voor de opvolging en bijsturing van</span></span>
-            </div>
-            <div class="breadcrumb">
-              <div class="breadcrumb__selector">
-                <input type="input" placeholder="filter">
-                <ul>
-                  <li>Dashboard</li>
-                  <li>Finace &amp; Admin</li>
-                  <li>Marketing &amp; Design</li>
-                  <li>pmx Engineering</li>
-                  <li>Professional Services</li>
-                  <li>Wiki</li>
-                </ul>
-              </div>
-              <span class="title"><span class="link">Mijlpaal</span> <span class="label">M01 - Processen varend erfgoed</span></span>
-            </div>
-          </div>
-        </header>
+        <header class="app__header" w3-include-html="includes/app-header.html"></header>
 
           <div class="app__document app__document--story">
               <div class="sticky__header__wrapper">
@@ -633,6 +485,10 @@
 
   </div><!-- /.app -->
 
+  <script>
+    w3.includeHTML();
+  </script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
   <!-- ALL FOR TABS -->
@@ -648,10 +504,6 @@
   <!-- END -->
 
   <script src="js/root.js"></script>
-
-  <script>
-    w3.includeHTML();
-  </script>
 
 </body>
 </html>
