--- a/pages/pmx.html
+++ b/pages/pmx.html
@@ -3,19 +3,21 @@ permalink: /pmx
 ---
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Elastic Search</title>
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i" rel="stylesheet">
-    <link rel="stylesheet" href="{{ site.baseurl }}/sass/old-pmx.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/sass/multiSelector.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/sass/itemBox.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>Elastic Search</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i" rel="stylesheet">
+
+  <link rel="stylesheet" href="{{ site.baseurl }}/sass/old-pmx.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/sass/multiSelector.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/sass/itemBox.css">
 </head>
 
-<body id="body" class="chrome chrome63">
+<body>
 
     <div id="superpageheader">
         <div class="hdr-menu">
@@ -78,38 +80,7 @@ permalink: /pmx
 
 
     <div class="tabline" id="tabline">
-
-        <div style="display:none;">
-            <div class="newpicker" id="Picker_48158156" options="hasSearch:false,hasInput:false,multiSelect:false,showLabel:false,closeGroups:false">
-                <span class="newpickerbutton">&nbsp;</span>
-                <div class="newpickercontent-wrapper">
-                    <div class="newpickercontent-container">
-                        <div class="newpickercontent">
-                            <p class="inlinesearch invisible">
-                                <input type="text" class="text">
-                            </p>
-                            <ul id="ctl00_HeaderContentPlaceHolder_PageHeader_tabline_filterpicker_itemlist" class="singlelinklist">
-
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="pickerinput invisible">
-                    <span class="noinput invisible">&nbsp;</span>
-                    <input type="text" value="" class="text full invisible">
-                    <span class="safetyspace">&nbsp;</span>
-                </div>
-            </div>
-        </div>
-
         <div class="tabs">
-            <div class="scroller scroller-right invisible" style="display: none;">
-                <div class="go-right"></div>
-            </div>
-            <div class="scroller scroller-left invisible" style="display: none;">
-                <div class="go-left"></div>
-            </div>
-
             <div class="tab-scroller">
                 <ul class="tabs">
                     <li id="element_0" class="tab tab-fixed" style=""><a class="tab" href="/acc_story663626-wd/workspace/1/summary" tabindex="-1"><span class="tab-text">Summary</span></a></li>
@@ -121,33 +92,15 @@ permalink: /pmx
         </div>
     </div>
 
-
     <div class="listtools-container">
-
         <div class="listtools" id="listtools">
-            <ul id="ctl00_HeaderContentPlaceHolder_ListTools_tools">
-
-            </ul>
-            <ul id="ctl00_HeaderContentPlaceHolder_ListTools_alttools" class="alt">
-
-            </ul>
-            <div class="clear"></div>
         </div>
         <div class="clear"></div>
     </div>
 
-
     <div id="ctl00_pagebody_container" class="pagebody-container">
         <div class="pagebody">
-            <div id="dialogbox-wrapper" class="dialogbox-wrapper invisible">
-                <div class="dialogbox-wrapper-content">
-                    <div id="dialogbox" class="dialogbox">
-
-                    </div>
-                </div>
-            </div>
             <div id="itemdetailpage" class="item-detail ">
-
                 <div id="ctl00_PageContentPlaceHolder_ctl00_ItemDetailContent">
                     <div class="header">
                         <div class="title">
@@ -177,8 +130,6 @@ permalink: /pmx
                             </ul>
                         </div>
                     </div>
-                    <input name="ctl00$PageContentPlaceHolder$ctl00$OwnerPersonId" type="hidden" id="ctl00_PageContentPlaceHolder_ctl00_OwnerPersonId">
-                    <input name="ctl00$PageContentPlaceHolder$ctl00$DefaultChildListId" type="hidden" id="ctl00_PageContentPlaceHolder_ctl00_DefaultChildListId">
 
                     <div class="tid-content-wrapper">
                         <div id="tabs" class="tid-sidebar">
@@ -271,8 +222,6 @@ permalink: /pmx
                                 <dd class="clear"></dd>
                                 </dl>
                             </div>
-                            <div id="ctl00_PageContentPlaceHolder_ctl00_m_OverviewTab_CFDetails" class="overview-cfields"></div>
-
                             <h2 class="pagetitle">Description</h2>
                             <div>
                                 <span id="fld_1_Item_23" ipe_id="1" ipe_object="Item" ipe_property="23" class="hasipe addcontent" title="Click here to edit" ipe_editmodeallowed="true"><a class="focuscatcher" href="#" onclick="return false"></a>Click here to edit</span>
