--- a/pages/pmx.html
+++ b/pages/pmx.html
@@ -15,6 +15,7 @@ permalink: /pmx
   <link rel="stylesheet" href="{{ site.baseurl }}/sass/old-pmx.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/sass/multiSelector.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/sass/itemBox.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/sass/selector.css">
 </head>
 
 <body>
@@ -376,17 +377,47 @@ permalink: /pmx
                     <div class="itemBoxBody">
                         <ul class="itemBoxTable__bodyRow">
                             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--text" style="flex-grow: 1;">
-                                <div class="itemBoxTable__bodyCellInner">Title Lorem ipsum</div>
+                                <div class="itemBoxTable__bodyCellInner">
+
+                                  <div class="pmx-selector pmx-selector--expanded pmx-selector--singleSelect pmx-selector--required ">
+                                    <div class="pmx-selector__value">
+                                      <div class="pmx-selector__label ">
+                                        <span class="pmx-selector__icon " style=""></span> Title ܌ Lorem ipsum
+                                      </div>
+                                    </div>
+                                  </div>
+
+                                </div>
                             </li>
                         </ul>
                         <ul class="itemBoxTable__bodyRow">
                             <li class="itemBoxTable__bodyCell  itemBoxTable__bodyCell--text" style="flex-grow: 1;">
-                                <div class="itemBoxTable__bodyCellInner">Assigned to Nick De Jaeger</div>
+                                <div class="itemBoxTable__bodyCellInner">
+
+                                  <div class="pmx-selector pmx-selector--expanded pmx-selector--singleSelect pmx-selector--required ">
+                                    <div class="pmx-selector__value">
+                                      <div class="pmx-selector__label ">
+                                        <span class="pmx-selector__icon " style=""></span> Assigned to ܌ Nick De Jaeger
+                                      </div>
+                                    </div>
+                                  </div>
+
+                                </div>
                             </li>
                         </ul>
                         <ul class="itemBoxTable__bodyRow">
                             <li class="itemBoxTable__bodyCell  itemBoxTable__bodyCell--text" style="flex-grow: 1;">
-                                <div class="itemBoxTable__bodyCellInner">Priority Low</div>
+                                <div class="itemBoxTable__bodyCellInner">
+
+                                  <div class="pmx-selector pmx-selector--expanded pmx-selector--singleSelect pmx-selector--required ">
+                                    <div class="pmx-selector__value">
+                                      <div class="pmx-selector__label ">
+                                        <span class="pmx-selector__icon " style=""></span> Priority ܌ dialog-wrapper
+                                      </div>
+                                    </div>
+                                  </div>
+
+                                </div>
                             </li>
                         </ul>
                     </div>
